# Forschsem

./: .gitignore  README.md  create_mix.py  main_train.py  requirements.txt
Datensatz/Aufnahme002/: Koordinaten.txt
Datensatz/Aufnahme003/: Koordinaten.txt
Meca500/: Aufnahmen_tool.py  Meca500_mit_Koordinaten.py  koordinaten.txt  readme  realsensev2.py  req.txt
SegemtationTrainig_v1/: =3.18  ReadMe.md  setup_instseg_envs.sh
SegemtationTrainig_v1/configs/: strawdi_yolo.yaml
SegemtationTrainig_v1/converted/coco/: instances_test.json  instances_val.json
SegemtationTrainig_v1/docker/: docker-compose.yml
SegemtationTrainig_v1/docker/detectron2/: Dockerfile  run_detectron2_docker.ps1  run_detectron2_docker.sh  train_detectron2.py
SegemtationTrainig_v1/docker/yolact/: Dockerfile  run_yolact_docker.sh  train_yolactpp.py
SegemtationTrainig_v1/models/: train_maskrcnn_d2.py  train_yolactpp.py  train_yolo.py  train_yolo8s.py
SegemtationTrainig_v1/runs/detect/train_hardcoded/: args.yaml
SegemtationTrainig_v1/runs/detect/train_hardcoded2/: args.yaml  results.csv
SegemtationTrainig_v1/runs/detect/train_hardcoded3/: args.yaml  results.csv
SegemtationTrainig_v1/runs/detect/train_yolov8s/: args.yaml  results.csv
SegemtationTrainig_v1/runs/detect/train_yolov8s2/: args.yaml
SegemtationTrainig_v1/runs/maskrcnn_r50fpn/: config.yaml  log.txt  metrics.json
SegemtationTrainig_v1/setup/: pipeline_detectron2.sh  pipeline_yolactpp.sh  pipeline_yolo8.ps1  pipeline_yolo8.sh
SegemtationTrainig_v1/tools/: convert_strawdi.py  plot_yolo_results.py  view_yolo_seg.py
codes/: EfficientAd.py  datasets.py  networks.py
models/: Ganomly.py  padim.py  patchcore.py  train_all.py  u_flow.py
models/CH-Rand_v2/: README.md  train.py
models/CH-Rand_v2/Configs/: configs.yaml
models/CLIP/: Clip_firstTry.ipynb
models/EfficientAd/: EfficientAd_load.py
models/Ganomaly/: Ganomly.py
models/JulisAutomatisierungsFunAndGames/: firsttry.py  requirements.txt
models/JulisAutomatisierungsFunAndGames/results/: summary_results.csv
models/Patch_SVDD/: main_train.py
models/Patch_SVDD/codes/: inspection.py  mvtecad.py  nearest_neighbor.py  utils.py
strawberry_ws/: ReadMe_dummy.md
strawberry_ws/data/tools/: inspect_ply.py  organize_strawberry.py
strawberry_ws/install/: local_setup.sh  setup.sh
strawberry_ws/install/strawberry_msgs/share/strawberry_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
strawberry_ws/install/strawberry_msgs/share/strawberry_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_strawberry_msgs__rosidl_generator_cExport-noconfig.cmake  export_strawberry_msgs__rosidl_generator_cExport.cmake  export_strawberry_msgs__rosidl_generator_cppExport.cmake  export_strawberry_msgs__rosidl_generator_pyExport-noconfig.cmake  export_strawberry_msgs__rosidl_generator_pyExport.cmake  export_strawberry_msgs__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_strawberry_msgs__rosidl_typesupport_fastrtps_cExport.cmake  export_strawberry_msgs__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_strawberry_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  strawberry_msgsConfig-version.cmake  strawberry_msgsConfig.cmake  strawberry_msgs__rosidl_typesupport_cExport-noconfig.cmake  strawberry_msgs__rosidl_typesupport_cExport.cmake  strawberry_msgs__rosidl_typesupport_cppExport-noconfig.cmake  strawberry_msgs__rosidl_typesupport_cppExport.cmake  strawberry_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake  strawberry_msgs__rosidl_typesupport_introspection_cExport.cmake  strawberry_msgs__rosidl_typesupport_introspection_cppExport-noconfig.cmake  strawberry_msgs__rosidl_typesupport_introspection_cppExport.cmake
strawberry_ws/install/strawberry_msgs/share/strawberry_msgs/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
strawberry_ws/install/strawberry_msgs/share/strawberry_msgs/msg/: FrameInfo.idl  FrameInfo.msg
strawberry_ws/install/strawberry_msgs/share/strawberry_msgs/srv/: CaptureSnapshot.idl  CaptureSnapshot.srv  CaptureSnapshot_Request.msg  CaptureSnapshot_Response.msg
strawberry_ws/install/strawberry_segmentation/share/strawberry_segmentation/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
strawberry_ws/install/strawberry_segmentation/share/strawberry_segmentation/models/: best.onnx
strawberry_ws/log/: latest_build  latest_list
strawberry_ws/src/meca500_ros2/: package.xml  setup.cfg  setup.py
strawberry_ws/src/meca500_ros2/meca500_ros2/: meca500_view_node.py  robot_dummy_node.py
strawberry_ws/src/strawberry_bringup/: package.xml  setup.cfg  setup.py
strawberry_ws/src/strawberry_bringup/strawberry_bringup/: dummy_system-launch.py  test_images_system.launch.py
strawberry_ws/src/strawberry_bringup/strawberry_bringup/launch/: dummy_system.launch.py
strawberry_ws/src/strawberry_camera/: package.xml  setup.cfg  setup.py
strawberry_ws/src/strawberry_camera/config/: realsense_d405_640x480_30fps.yml
strawberry_ws/src/strawberry_camera/strawberry_camera/: camera_dummy_node.py  camera_folder_node.py  strawberry_snapshot_node.py
strawberry_ws/src/strawberry_cluster/: package.xml
strawberry_ws/src/strawberry_msgs/: CMakeLists.txt  package.xml
strawberry_ws/src/strawberry_msgs/msg/: FrameInfo.msg
strawberry_ws/src/strawberry_msgs/srv/: CaptureSnapshot.srv
strawberry_ws/src/strawberry_segmentation/: package.xml  setup.cfg  setup.py
strawberry_ws/strawberry_cluster/: setup.cfg  setup.py
strawberry_ws/strawberry_cluster/strawberry_cluster/: strawberry_cluster_node.py
(+109 files in other folders)
