<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>meca500_ros2</name>
  <version>0.0.1</version>
  <description>Dummy Meca500 publisher for /joint_states and TF frames.</description>

  <maintainer email="julian.schrenk@stud.hs-hannover.de">Julian Schrenk</maintainer>
  <license>MIT</license>

  <!-- Runtime deps -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <!-- Für Quaternionen (python lib). Falls per apt installiert: ros-$ROS_DISTRO-tf-transformations -->
  <exec_depend>tf-transformations</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
