<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>strawberry_bringup</name>
  <version>0.0.1</version>
  <description>Launch files for the strawberry perception pipeline (dataset camera + segmentation + features).</description>

  <maintainer email="julian.schrenk@stud.hs-hannover.de">Julian Schrenk</maintainer>
  <license>MIT</license>

  <!-- Build system -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Launch runtime -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Nodes launched by this bringup -->
  <exec_depend>strawberry_camera</exec_depend>
  <exec_depend>strawberry_segmentation</exec_depend>

  <!-- Optional clustering package (only needed if enable_cluster:=true) -->
  <exec_depend>strawberry_cluster</exec_depend>

  <!-- Message package used across the pipeline (FrameInfo) -->
  <exec_depend>strawberry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
