<?xml version="1.0"?>
<package format="3">
  <name>strawberry_msgs</name>
  <version>0.0.1</version>
  <description>Strawberry custom interfaces (messages and services).</description>

  <maintainer email="julian.schrenk@stud.hs-hannover.de">parallels</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Interface generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Dependencies used inside .msg/.srv definitions -->
  <depend>std_msgs</depend>

  <!-- Required for interface packages -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
