<?xml version="1.0"?>
<package format="3">
  <name>strawberry_msgs</name>
  <version>0.0.0</version>
  <description>Strawberry custom interfaces</description>
  <maintainer email="julian.schrenk@stud.hs-hannover.de">parallels</maintainer>
  <license>TODO: License declaration</license>

  <!-- Buildsystem -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Für die .srv-Generierung -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Nur nötig, wenn du Messages/Services aus diesen Paketen benutzt -->
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- WICHTIG: member_of_group MUSS auf Top-Level stehen, NICHT in <export> -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
