<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>strawberry_segmentation</name>
  <version>0.0.1</version>
  <description>Ultralytics Runtime-based YOLOv8 segmentation for strawberries (inference only).</description>

  <maintainer email="julian.schrenk@stud.hs-hannover.de">Julian Schrenk</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
